--- a/setiap-player-baru-menang-di-kayaraya.html
+++ b/setiap-player-baru-menang-di-kayaraya.html
@@ -183,7 +183,7 @@
               "@type": "WebPage",
               "@id": "https://pngndiscov.github.io/affahiyh/setiap-player-baru-menang-di-kayaraya.html"
             },
-            "headline": "Ramai Soal Kemenangan Rp 125 Juta di R Mahjong Wins 3, RAJA168 Bagikan Tips Rahasia untuk Pemain Aktif",
+            "headline": "Modal Receh Cuan Besar: Inilah Pola Rahasia Game Permen Gacor Yang Terpercaya",
             "description": "Modal receh di kayaraya cuan besar menegaskan peluang nyata dengan pola unik, menawarkan sensasi berbeda bagi pencinta permainan permen.",
         "image": ["https://foto-discover.b-cdn.net/kr/setiap-player-baru-menang-di-kayaraya.jpg"],
             "author": {
